add_executable(tcpClient tcpClient/tcpClient.cpp)
if(WIN32)
  target_link_libraries(tcpClient ws2_32 gNet)
elseif(UNIX)
  find_package(Threads REQUIRED)
  target_link_libraries(tcpClient gNet pthread)
endif()

add_executable(tcpServer tcpServer/tcpServer.cpp)
if(WIN32)
  target_link_libraries(tcpServer ws2_32 gNet)
elseif(UNIX)
  find_package(Threads REQUIRED)
  target_link_libraries(tcpServer gNet pthread)
endif()